# bfm-finetune

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  finetune.sh  initialize.sh  pyproject.toml
bfm_finetune/: aurora_corr_matrix.py  aurora_feature_extractor.py  aurora_mod.py  aurora_mod_backbone.py  bfm_get_latent.py  bfm_mod.py  create_patches.py  evaluate_aurora_finetune.py  evaluate_bfm_finetune.py  finetune.py  finetune_bfm_new_variables.py  finetune_bfm_sdm.py  finetune_chelsa.py  finetune_chelsa_aurora.py  finetune_config.yaml  finetune_config_taimur.yaml  finetune_masked_variables.py  finetune_new_variables.py  finetune_new_variables_multi_gpu.py  geolifeclef_batch.py  glc24_data.py  lora_adapter.py  metrics.py  new_variable_decoder.py  paths.py  plantnet_downloader.py  plots.py  plots_v2.py  spatial_autocorr.py  spatial_autocorr.yaml  test_aurora_dataload.ipynb  test_extend_ft.py  train_configs.yaml  unet_classification.py  utils.py  vis_tools.py
bfm_finetune/config/: bfm_train.yaml
bfm_finetune/configs/: bfm_train_config.yaml
bfm_finetune/dataloaders/: aurora_dataload.py  dataloader_utils.py
bfm_finetune/dataloaders/biovars/: batch.py  utils.py
bfm_finetune/prithvi/: config.py  create_patches.py  finetune_species.py  inference.py  inference.sh  train.sh  utils.py
notebooks/: chelsa_2010_tas_pr.ipynb  debug_batch.ipynb  geolifeclef_species.ipynb  metrics_test.ipynb  patchify.ipynb  visualise_eval.ipynb
outputs_bfm_spatial/plots/: train_coverage.geojson
tests/: test_basic_aurora.py  test_extend_ft.py  utils.py
(+12 files in other folders)
