[project]
name = "bfm-finetune"
version = "0.1.0"
description = ""
authors = [
    {name = "Thanasis Trantas",email = "thanasis.trantas@tno.nl"},
    {name = "Martino Mensio",email = "martino.mensio@tno.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "microsoft-aurora (>=1.5.0,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
